# zhengqi

./: main.py  pyproject.toml  requirements.txt
config/: config.py
data/: data.json  zhengqi_test_pre.txt
src/: GBR_model.py  __init__.py  data_pre.py  do_gridsearch.py  steam.py  train.py
utils/: __init__.py  log.py
