[project]
name = "zhengqi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.3.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.260113",
    "pyecharts>=2.1.0",
    "scikit-learn>=1.7.2",
]
